# cpp-utils-collections

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: on-push.yml  os-linux.yml  os-macos.yml  os-windows.yml
Command/: CMakeLists.txt
Command/implementations/: EraseCommand.cppm  InsertCommand.cppm
Command/src/: CommandHistory.cppm
Input/: CMakeLists.txt
Input/src/: InputNumerics.cppm
command/: CMakeLists.txt
command/src/: CommandClear.cppm  CommandErase.cppm  CommandHistory.cppm  CommandInsert.cppm  CommandSwap.cppm  CommandUpdate.cppm  ICommand.cppm  cmd.cppm
input/: CMakeLists.txt
input/src/: InputHelper.cppm  InputNumeric.cppm  InputNumericInteractive.cppm  InputString.cppm  inx.cppm
menu/: CMakeLists.txt
menu/src/: MenuLab.cppm
